# view_wrapper

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  cxxdeps.txt  makefile
.devcontainer/: Dockerfile
include/view_wrapper/: Range.hpp  Subvector.hpp  View.hpp  subvector.hpp
src/: demo.cpp  demo_subvector.cpp
tests/: test_view.cpp
